@@ -1,3 +1,8 @@
+2011-09-09 Borut Razem <borut.razem AT gmail.com>
+
+	* support/cpp/md5.h:
+	  included stdint.h for uintptr_t declaration
+
 2011-09-08 Borut Razem <borut.razem AT gmail.com>
 
 	* support/cpp/md5.h:
